# SAQ

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
data/: README.md
python/: compute_gt.py  cvt_data.py  ivf.py  pca.py  requirements.txt
python/utils/: io.py
results/: draw_error.ipynb
results/saq/: gist_ivf4096_b1_caq_adj_seg_pca_sm4.csv  gist_ivf4096_b4_caq_adj_seg_pca_sm4.csv  gist_ivf4096_b8_caq_adj_seg_pca_sm4.csv
saqlib/: defines.hpp
saqlib/index/: initializer.hpp  ivf.hpp
saqlib/quantization/: cluster_data.hpp  cluster_packer.hpp  config.h  quantizer.hpp  quantizer_data.hpp  saq_data.hpp  saq_estimator.hpp  saq_quantizer.hpp  saq_searcher.hpp  single_data.hpp
saqlib/quantization/caq/: caq_encoder.hpp  caq_estimator.hpp
saqlib/quantization/fastscan/: fastscan.hpp  fastscan_highacc.hpp  lut.hpp
saqlib/utils/: IO.hpp  StopW.hpp  buffer.hpp  code_helper.hpp  memory.hpp  pool.hpp  rotator.hpp  space.hpp  tools.hpp  visited_pool.hpp
script/: run_ivf.sh  run_qps.sh  run_relative_err.sh  vtune_memory_bandwidth.py
src/: CMakeLists.txt  compute_gt.cpp  create_index.cpp  define_options.h  test_ivf.cpp  test_qps.cpp  test_relative_error.cpp
unit_test/: CMakeLists.txt  test_base.hpp  ut_cluster_estimator.cpp  ut_ivf_error.cpp  ut_ivf_recall.cpp  ut_single_estimator.cpp
